--- a/package.json
+++ b/package.json
@@ -1,23 +1,25 @@
 {
-  "name": "github-fetcher-fullstack-v2",
+  "name": "travel-dest-fullstack",
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
   "scripts": {
-    "react-dev": "webpack -d --watch",
-    "server-dev": "nodemon server/index.js"
+    "build": "webpack -d --watch",
+    "start": "nodemon server/index.js"
   },
-  "author": "Beth Johnson",
+  "author": "Wilson",
   "license": "ISC",
   "devDependencies": {
     "babel-core": "^6.23.1",
     "babel-loader": "^6.3.2",
     "babel-preset-es2015": "^6.22.0",
     "babel-preset-react": "^6.23.0",
+    "nodemon": "^1.18.7",
     "webpack": "^2.2.1"
   },
   "dependencies": {
     "angular": "^1.6.3",
+    "axios": "^0.18.0",
     "body-parser": "^1.17.2",
     "express": "^4.15.0",
     "jquery": "^3.1.1",
